# libops

./: CMakeLists.txt  ClassOps.cxx  ClassOps.hxx  ClassOps.txx  ClassOps_impl.hxx  Error.cxx  Error.hxx  Ops.cpp  Ops.hxx  OpsHeader.hxx  SConstruct  example.cpp  example.lua  example.py  history  ops.i
.github/workflows/: ci.yml
cmake/: StandardProjectSettings.cmake
